--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -5,6 +5,8 @@ name: deploy on pr update
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [ main ]    
   pull_request:
     branches: [ feature ]
 
@@ -26,4 +28,4 @@ jobs:
         env:
           KUBE_CONGIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: kubectl apply -f hello_deployment.yaml
+          args: kubectl get pods --namespace test-auction
