--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -23,9 +23,9 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@master
-      - name: deploy to cluster
-        uses: steebchen/kubectl@master
+      - name: get pods
+        uses: wahyd4/kubectl-helm-action@master
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: get pods --namespace test-auction
+          args: kubectl get pods --namespace test-auction
