--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -22,10 +22,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/checkout@master
-      - name: get pods
-        uses: wahyd4/kubectl-helm-action@master
+      - run: 'echo "$SSH_KEY" > key'
+        shell: bash
         env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args: kubectl get pods --namespace test-auction
+          SSH_KEY: ${{secrets.KUBE_CONFIG}}
+      
+      - run: ls -la
+        shell: bash
