--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -27,5 +27,5 @@ jobs:
         env:
           SSH_KEY: ${{secrets.KUBE_CONFIG}}
       
-      - run: ls -la
+      - run: cat key
         shell: bash
