--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -22,10 +22,10 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - run: 'echo "$SSH_KEY" > key'
-        shell: bash
-        env:
-          SSH_KEY: ${{secrets.KUBE_CONFIG}}
-      
-      - run: cat key
-        shell: bash
+    - uses: actions/checkout@master
+    - name: deploy to cluster
+      uses: qazz92/kubectl@1.0.3
+      env:
+        kube_confg_data: ${{ secrets.KUBE_CONFIG }}
+      with:
+        args: get pods --namespace test-auction
