--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -23,8 +23,8 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@master
-    - uses: actions-hub/kubectl@master
+    - uses: actions-hub/kubectl_actions@0.1.0
       env:
         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       with:
-        args: get pods --namespace test-auction
+        args: kubectl get pods --namespace test-auction
