--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -24,7 +24,10 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - uses: keijoraamat/kubectl_action@0.1.0
+      id: kubectl_command
       env:
         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       with:
         args: kubectl get pods --namespace test-auction
+    - name: Get output od kubectl command
+      run: echo "${{ steps.kubectl_command.outputs.kubectl_response }}"
