--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -28,6 +28,4 @@ jobs:
       env:
         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       with:
-        args: kubectl version
-    - name: Get output od kubectl command
-      run: echo "${{ steps.kubectl_command.outputs.kubectl_response }}"
+        args: kubectl get pods --namespace test-auction
