--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   prepare_variables:
-    runs-on: ubuntu
+    runs-on: ubuntu-20.04
     steps:
       - name: Set ENV for codeclimate
         run: |
