--- a/.github/workflows/hello_deploy.yml
+++ b/.github/workflows/hello_deploy.yml
@@ -20,12 +20,20 @@ jobs:
     steps:
       - name: Set ENV for codeclimate
         run: |
+          echo "Default"
+          printenv | grep GITHUB*
+          echo "*******************"
+          echo "Adding GIT_BRANCH to GITHUB_ENV"
           echo "GIT_BRANCH=$GITHUB_REF" >> $GITHUB_ENV
+          printenv | grep GITHUB*
+          echo "*******************"
+          echo "Adding GIT_COMMIT_SHA to GITHUB_ENV"
           echo "GIT_COMMIT_SHA=$GITHUB_SHA" >> $GITHUB_ENV
+          printenv | grep GITHUB*
       - name: Print ENV for codeclimate
         run: |
           echo $(cat GITHUB_ENV)
-          printenv
+          printenv | grep GITHUB*
   #build:
     # The type of runner that the job will run on
     #runs-on: self-hosted
